# oopetris

./:  Doxyfile  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  annotated.html  application_8hpp_source.html  bag_8hpp_source.html  classes.html  color_8hpp_source.html  com.github.mgerhold.OOPetris.yml  command__line__arguments_8hpp_source.html  conanfile.py  controls_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  event__dispatcher_8hpp_source.html  event__listener_8hpp_source.html  files.html  font_8hpp_source.html  functions.html  functions_func.html  github.mgerhold.OOPetris.yml  graph_legend.html  grid_8hpp_source.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.md5  inherit_graph_12.map  inherit_graph_13.map  inherit_graph_13.md5  inherit_graph_14.map  inherit_graph_14.md5  inherit_graph_15.map  (+162 more)
android/: .gitignore  CMakeLists.txt  android.cmake  crossbuilt.txt  flatpak-icon-helper.sh  oopetris.html  run-switch.sh  run-web.sh  run.sh  switch.mk  vcpkg.json
android/helper_headers/: bit.hpp  bit_cast.hpp  concepts.hpp  functional.hpp  ranges.hpp
android/project/: .gitignore
backend/: .gitignore  Dockerfile  README.md  meson.build  meson_options.txt
backend/frontend/: index.html
backend/src/: App.cpp  AppComponent.hpp  DatabaseComponent.hpp  ErrorHandler.cpp  ErrorHandler.hpp  Helper.cpp  Helper.hpp  SwaggerComponent.hpp  meson.build
backend/subprojects/: .gitignore  HTTPRequest.wrap  oatpp-openssl.wrap  oatpp-sqlite.wrap  oatpp-swagger.wrap  oatpp-websocket.wrap  oatpp-zlib.wrap  oatpp.wrap  stduuid.wrap
backend/tools/: install-service.sh  oopetris.service
src/: application.cpp  application.hpp  bag.cpp  bag.hpp  capabilities.cpp  capabilities.hpp  clock_source.cpp  clock_source.hpp  color.cpp  color.hpp  command_line_arguments.hpp  constants.hpp  controls.hpp  event_dispatcher.cpp  event_dispatcher.hpp  event_listener.hpp  font.cpp  font.hpp  game_manager.cpp  game_manager.hpp  grid.cpp  grid.hpp  ingame_scene.cpp  ingame_scene.hpp  input.cpp  input.hpp  input_event.hpp  key_codes.hpp  local_multiplayer.cpp  local_multiplayer.hpp  magic_enum_wrapper.hpp  main.cpp  main_menu_scene.cpp  main_menu_scene.hpp  meson.build  mino.cpp  mino.hpp  mino_stack.cpp  mino_stack.hpp  music_manager.cpp  (+45 more)
src/discord/: core.cpp  core.hpp  meson.build
src/executables/: meson.build
src/game/: bag.cpp  bag.hpp  command_line_arguments.cpp  command_line_arguments.hpp  game.cpp  game.hpp  graphic_helpers.cpp  graphic_helpers.hpp  grid.cpp  grid.hpp  grid_properties.hpp  input_creator.cpp  input_creator.hpp  layout.cpp  layout.hpp  meson.build  mino.cpp  mino.hpp  mino_stack.cpp  mino_stack.hpp  rotation.cpp  rotation.hpp  simulated_tetrion.cpp  simulated_tetrion.hpp  simulation.cpp  simulation.hpp  tetrion.cpp  tetrion.hpp  tetrion_snapshot.cpp  tetrion_snapshot.hpp  tetromino.cpp  tetromino.hpp  tetromino_type.cpp  tetromino_type.hpp
src/graphics/: meson.build  point.hpp  rect.hpp  renderer.cpp  renderer.hpp  sdl_context.cpp  sdl_context.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  video_renderer.cpp  video_renderer.hpp  video_renderer_embedded.cpp  video_renderer_linux.cpp  video_renderer_unix.cpp  video_renderer_windows.cpp  window.cpp  window.hpp
src/helper/: bool_wrapper.hpp  c_helpers.hpp  clock_source.cpp  clock_source.hpp  color.cpp  color.hpp  color_literals.hpp  command_line_arguments.hpp  compatibility.hpp  console_helpers.cpp  console_helpers.hpp  const_utils.hpp  constants.hpp  date.cpp  date.hpp  errors.cpp  errors.hpp  expected.hpp  export_symbols.hpp  format.hpp  format_ranges.hpp  git_helper.hpp  git_version.hpp.in  graphic_utils.cpp  graphic_utils.hpp  logger.cpp  logger.hpp  meson.build  message_box.cpp  message_box.hpp  music_utils.hpp  nfd.cpp  nfd_include.hpp  optional.hpp  parse_json.cpp  parse_json.hpp  platform.cpp  platform.hpp  random.cpp  random.hpp  (+12 more)
src/input/: console_buttons.hpp  controller_input.cpp  controller_input.hpp  controls.hpp  event_dispatcher.cpp  event_dispatcher.hpp  event_listener.hpp  game_input.cpp  game_input.hpp  gamecontroller_input.cpp  gamecontroller_input.hpp  guid.cpp  guid.hpp  input.cpp  input.hpp  input_creator.cpp  input_creator.hpp  joystick_input.cpp  joystick_input.hpp  keyboard_input.cpp  keyboard_input.hpp  meson.build  mouse_input.cpp  mouse_input.hpp  replay_input.cpp  replay_input.hpp  touch_input.cpp  touch_input.hpp
src/libs/: meson.build
src/lobby/: api.cpp  api.hpp  client.cpp  client.hpp  constants.hpp  curl_client.cpp  curl_client.hpp  httplib_client.cpp  httplib_client.hpp  meson.build  types.hpp  web_client.cpp  web_client.hpp
src/manager/: event_dispatcher.hpp  event_listener.hpp  font.cpp  font.hpp  input_event.hpp  key_codes.hpp  meson.build  music_manager.cpp  music_manager.hpp  recording.hpp  resource_manager.hpp  sdl_controller_key.cpp  sdl_controller_key.hpp  sdl_key.cpp  sdl_key.hpp  service_provider.hpp  settings.cpp  settings.hpp  settings_manager.cpp  settings_manager.hpp
src/network/: connection_manager.cpp  connection_manager.hpp  crc32.h  meson.build  network_address_old.cpp  network_address_old.hpp  network_data.cpp  network_data.hpp  network_manager.cpp  network_manager.hpp  network_transportable.cpp  network_transportable.hpp  network_util.hpp  online_handler.cpp  online_handler.hpp  online_input.cpp  online_input.hpp
src/platform/: android_input.cpp  android_input.hpp  capabilities.cpp  capabilities.hpp  console_buttons.hpp  console_input.cpp  console_input.hpp  input.cpp  input.hpp  keyboard_input.cpp  meson.build  pc_input.cpp  pc_input.hpp  platform.hpp  replay_input.cpp  replay_input.hpp  switch_buttons.hpp  switch_input.cpp  switch_input.hpp
src/plugins/: meson.build
src/recordings/: additional_information.cpp  additional_information.hpp  helper.hpp  meson.build  recording.hpp  recording_json_wrapper.hpp  (+7 more)
tests/: entry.cpp  meson.build
tools/: .gitignore  grabber.py  header_libs.py  meson.build  version_grabber.py
(+489 files in other folders)
