option(
    'build_installer',
    type: 'boolean',
    value: false,
    description: 'build the installer, this is either a flatpak or windows exe installer or similar',
)

option(
    'clang_libcpp',
    type: 'feature',
    value: 'auto',
    description: 'if using clang, build with libc++ instead of libstdc++ (gcc stdlib)',
)

option(
    'tests',
    type: 'boolean',
    value: false,
    description: 'whether or not tests should be built',
)

option(
    'only_build_libs',
    type: 'boolean',
    value: false,
    description: 'if you only want to build the libs, enable this',
)


option(
    'run_in_ci',
    type: 'boolean',
    value: false,
    description: 'enable this, if it is run in CI',
)
